Renamed brew update to what it is actually doing.

--- a/provisioning/ansible/roles/brew/tasks/main.yml
+++ b/provisioning/ansible/roles/brew/tasks/main.yml
@@ -1,5 +1,5 @@
 ---
-- name: Update & Upgrade
+- name: Update
   homebrew: update_homebrew=yes upgrade_all=no
 
 - name: Install > Tap 'homebrew/dupes'
